@@ -8,6 +8,8 @@ v6.3.0-git
 v6.2.1
 ------
 
+[mms] Don't perform purge sentmail login task unless at least one sentmail
+      mailbox exists.
 [mms] Don't perform purge Spam login task unless Spam mailbox exists.
 [mms] Fix dragging a mailbox to the base level in dynamic view.
 [mms] Add ability to drag/drop text to dynamic HTML compose window on Chrome
